@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>520</width>
-    <height>538</height>
+    <width>515</width>
+    <height>552</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -20,7 +20,7 @@
     <number>0</number>
    </property>
    <property name="spacing" >
-    <number>6</number>
+    <number>0</number>
    </property>
    <item>
     <widget class="QTabWidget" name="subtitles_tab" >
@@ -161,6 +161,94 @@
           </spacer>
          </item>
         </layout>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_6" >
+         <property name="title" >
+          <string>Size</string>
+         </property>
+         <layout class="QHBoxLayout" >
+          <property name="margin" >
+           <number>9</number>
+          </property>
+          <property name="spacing" >
+           <number>6</number>
+          </property>
+          <item>
+           <widget class="QLabel" name="textLabel2_2" >
+            <property name="text" >
+             <string>A&amp;utoscale:</string>
+            </property>
+            <property name="wordWrap" >
+             <bool>false</bool>
+            </property>
+            <property name="buddy" >
+             <cstring>font_autoscale_combo</cstring>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="font_autoscale_combo" >
+            <item>
+             <property name="text" >
+              <string>No autoscale</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>Proportional to movie height</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>Proportional to movie width</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>Proportional to movie diagonal</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item>
+           <spacer>
+            <property name="orientation" >
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeType" >
+             <enum>QSizePolicy::Preferred</enum>
+            </property>
+            <property name="sizeHint" >
+             <size>
+              <width>71</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QLabel" name="textLabel3_2" >
+            <property name="text" >
+             <string>S&amp;cale:</string>
+            </property>
+            <property name="wordWrap" >
+             <bool>false</bool>
+            </property>
+            <property name="buddy" >
+             <cstring>font_text_scale</cstring>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="font_text_scale" >
+            <property name="maximum" >
+             <number>100</number>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </item>
        <item>
         <widget class="QGroupBox" name="groupBox_2" >
@@ -315,7 +403,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab_2" >
+     <widget class="QWidget" name="TabPage" >
       <attribute name="title" >
        <string>&amp;Font</string>
       </attribute>
@@ -327,7 +415,7 @@
         <number>6</number>
        </property>
        <item>
-        <widget class="QGroupBox" name="groupBox_3" >
+        <widget class="QGroupBox" name="groupBox_5" >
          <property name="title" >
           <string>Font</string>
          </property>
@@ -411,11 +499,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QGroupBox" name="groupBox_4" >
+        <widget class="QGroupBox" name="groupBox_7" >
          <property name="title" >
-          <string>Size</string>
+          <string>SSA/ASS library</string>
          </property>
-         <layout class="QHBoxLayout" >
+         <layout class="QVBoxLayout" >
           <property name="margin" >
            <number>9</number>
           </property>
@@ -423,77 +511,172 @@
            <number>6</number>
           </property>
           <item>
-           <widget class="QLabel" name="textLabel2" >
+           <widget class="QLabel" name="textLabel1_13" >
             <property name="text" >
-             <string>A&amp;utoscale:</string>
+             <string>The new SSA/ASS library will provide nice styled subtitles for external SSA/ASS subtitles files and Matroska tracks. But it will be used too for rendering other formats like SUB and SRT files.</string>
+            </property>
+            <property name="alignment" >
+             <set>Qt::AlignVCenter</set>
             </property>
             <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-            <property name="buddy" >
-             <cstring>font_autoscale_combo</cstring>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QComboBox" name="font_autoscale_combo" >
-            <item>
-             <property name="text" >
-              <string>No autoscale</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>Proportional to movie height</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>Proportional to movie width</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>Proportional to movie diagonal</string>
-             </property>
-            </item>
+           <widget class="QCheckBox" name="font_ass_check" >
+            <property name="text" >
+             <string>&amp;Use SSA/ASS library for subtitle rendering</string>
+            </property>
            </widget>
           </item>
           <item>
-           <spacer>
+           <layout class="QHBoxLayout" >
+            <property name="margin" >
+             <number>0</number>
+            </property>
+            <property name="spacing" >
+             <number>6</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="asscolor_label" >
+              <property name="enabled" >
+               <bool>false</bool>
+              </property>
+              <property name="text" >
+               <string>&amp;Text color:</string>
+              </property>
+              <property name="wordWrap" >
+               <bool>false</bool>
+              </property>
+              <property name="buddy" >
+               <cstring>colorButton</cstring>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="colorButton" >
+              <property name="enabled" >
+               <bool>false</bool>
+              </property>
+              <property name="text" >
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer>
+              <property name="orientation" >
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType" >
+               <enum>QSizePolicy::Preferred</enum>
+              </property>
+              <property name="sizeHint" >
+               <size>
+                <width>41</width>
+                <height>31</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QLabel" name="assbordercolor_label" >
+              <property name="enabled" >
+               <bool>false</bool>
+              </property>
+              <property name="text" >
+               <string>&amp;Border color:</string>
+              </property>
+              <property name="wordWrap" >
+               <bool>false</bool>
+              </property>
+              <property name="buddy" >
+               <cstring>borderButton</cstring>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="borderButton" >
+              <property name="enabled" >
+               <bool>false</bool>
+              </property>
+              <property name="text" >
+               <string/>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <widget class="Line" name="ass_styles_line" >
+            <property name="sizePolicy" >
+             <sizepolicy>
+              <hsizetype>7</hsizetype>
+              <vsizetype>0</vsizetype>
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="frameShape" >
+             <enum>QFrame::HLine</enum>
+            </property>
+            <property name="frameShadow" >
+             <enum>QFrame::Sunken</enum>
+            </property>
             <property name="orientation" >
              <enum>Qt::Horizontal</enum>
             </property>
-            <property name="sizeType" >
-             <enum>QSizePolicy::Preferred</enum>
-            </property>
-            <property name="sizeHint" >
-             <size>
-              <width>71</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
+           </widget>
           </item>
           <item>
-           <widget class="QLabel" name="textLabel3" >
-            <property name="text" >
-             <string>S&amp;cale:</string>
-            </property>
-            <property name="wordWrap" >
+           <widget class="QLabel" name="styles_desc_label" >
+            <property name="enabled" >
              <bool>false</bool>
             </property>
-            <property name="buddy" >
-             <cstring>font_text_scale</cstring>
+            <property name="text" >
+             <string>Here you can override styles for SSA/ASS subtitles. It can be also used for fine-tuning the rendering of SRT and SUB subtitles by the SSA/ASS library. Example: &lt;b>Bold=1,Outline=2,Shadow=4&lt;/b></string>
+            </property>
+            <property name="alignment" >
+             <set>Qt::AlignVCenter</set>
+            </property>
+            <property name="wordWrap" >
+             <bool>true</bool>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="font_text_scale" >
-            <property name="maximum" >
-             <number>100</number>
+           <layout class="QHBoxLayout" >
+            <property name="margin" >
+             <number>0</number>
             </property>
-           </widget>
+            <property name="spacing" >
+             <number>6</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="ass_styles_label" >
+              <property name="enabled" >
+               <bool>false</bool>
+              </property>
+              <property name="text" >
+               <string>St&amp;yles:</string>
+              </property>
+              <property name="wordWrap" >
+               <bool>false</bool>
+              </property>
+              <property name="buddy" >
+               <cstring>ass_styles_edit</cstring>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="ass_styles_edit" >
+              <property name="enabled" >
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
@@ -503,210 +686,10 @@
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeType" >
-          <enum>QSizePolicy::Expanding</enum>
-         </property>
          <property name="sizeHint" >
           <size>
            <width>20</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="TabPage" >
-      <attribute name="title" >
-       <string>SSA/&amp;ASS library</string>
-      </attribute>
-      <layout class="QVBoxLayout" >
-       <property name="margin" >
-        <number>6</number>
-       </property>
-       <property name="spacing" >
-        <number>6</number>
-       </property>
-       <item>
-        <widget class="QLabel" name="textLabel1_13" >
-         <property name="text" >
-          <string>The new SSA/ASS library will provide nice styled subtitles for external SSA/ASS subtitles files and Matroska tracks. But it will be used too for rendering other formats like SUB and SRT files.</string>
-         </property>
-         <property name="alignment" >
-          <set>Qt::AlignVCenter</set>
-         </property>
-         <property name="wordWrap" >
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="font_ass_check" >
-         <property name="text" >
-          <string>&amp;Use SSA/ASS library for subtitle rendering</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" >
-         <property name="margin" >
-          <number>0</number>
-         </property>
-         <property name="spacing" >
-          <number>6</number>
-         </property>
-         <item>
-          <widget class="QLabel" name="asscolor_label" >
-           <property name="enabled" >
-            <bool>false</bool>
-           </property>
-           <property name="text" >
-            <string>&amp;Text color:</string>
-           </property>
-           <property name="wordWrap" >
-            <bool>false</bool>
-           </property>
-           <property name="buddy" >
-            <cstring>colorButton</cstring>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="colorButton" >
-           <property name="enabled" >
-            <bool>false</bool>
-           </property>
-           <property name="text" >
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer>
-           <property name="orientation" >
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeType" >
-            <enum>QSizePolicy::Preferred</enum>
-           </property>
-           <property name="sizeHint" >
-            <size>
-             <width>41</width>
-             <height>31</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QLabel" name="assbordercolor_label" >
-           <property name="enabled" >
-            <bool>false</bool>
-           </property>
-           <property name="text" >
-            <string>&amp;Border color:</string>
-           </property>
-           <property name="wordWrap" >
-            <bool>false</bool>
-           </property>
-           <property name="buddy" >
-            <cstring>borderButton</cstring>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="borderButton" >
-           <property name="enabled" >
-            <bool>false</bool>
-           </property>
-           <property name="text" >
-            <string/>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <widget class="Line" name="ass_styles_line" >
-         <property name="sizePolicy" >
-          <sizepolicy>
-           <hsizetype>7</hsizetype>
-           <vsizetype>0</vsizetype>
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="frameShape" >
-          <enum>QFrame::HLine</enum>
-         </property>
-         <property name="frameShadow" >
-          <enum>QFrame::Sunken</enum>
-         </property>
-         <property name="orientation" >
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="styles_desc_label" >
-         <property name="enabled" >
-          <bool>false</bool>
-         </property>
-         <property name="text" >
-          <string>Here you can override styles for SSA/ASS subtitles. It can be also used for fine-tuning the rendering of SRT and SUB subtitles by the SSA/ASS library. Example: &lt;b>Bold=1,Outline=2,Shadow=4&lt;/b></string>
-         </property>
-         <property name="alignment" >
-          <set>Qt::AlignVCenter</set>
-         </property>
-         <property name="wordWrap" >
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" >
-         <property name="margin" >
-          <number>0</number>
-         </property>
-         <property name="spacing" >
-          <number>6</number>
-         </property>
-         <item>
-          <widget class="QLabel" name="ass_styles_label" >
-           <property name="enabled" >
-            <bool>false</bool>
-           </property>
-           <property name="text" >
-            <string>St&amp;yles:</string>
-           </property>
-           <property name="wordWrap" >
-            <bool>false</bool>
-           </property>
-           <property name="buddy" >
-            <cstring>ass_styles_edit</cstring>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="ass_styles_edit" >
-           <property name="enabled" >
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <spacer>
-         <property name="orientation" >
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType" >
-          <enum>QSizePolicy::Expanding</enum>
-         </property>
-         <property name="sizeHint" >
-          <size>
-           <width>20</width>
-           <height>20</height>
+           <height>40</height>
           </size>
          </property>
         </spacer>
@@ -719,13 +702,13 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MyFontComboBox</class>
-   <extends>QFontComboBox</extends>
+   <class>MyComboBox</class>
+   <extends>QComboBox</extends>
    <header>mycombobox.h</header>
   </customwidget>
   <customwidget>
-   <class>MyComboBox</class>
-   <extends>QComboBox</extends>
+   <class>MyFontComboBox</class>
+   <extends>QFontComboBox</extends>
    <header>mycombobox.h</header>
   </customwidget>
  </customwidgets>
@@ -737,13 +720,6 @@
   <tabstop>sub_pos_slider</tabstop>
   <tabstop>subtitles_on_screeshots_check</tabstop>
   <tabstop>subfont_check</tabstop>
-  <tabstop>ttf_font_button</tabstop>
-  <tabstop>ttf_font_edit</tabstop>
-  <tabstop>searchButton</tabstop>
-  <tabstop>system_font_button</tabstop>
-  <tabstop>fontCombo</tabstop>
-  <tabstop>font_autoscale_combo</tabstop>
-  <tabstop>font_text_scale</tabstop>
   <tabstop>font_ass_check</tabstop>
   <tabstop>colorButton</tabstop>
   <tabstop>borderButton</tabstop>
@@ -758,12 +734,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>82</x>
-     <y>116</y>
+     <x>83</x>
+     <y>114</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>269</x>
-     <y>116</y>
+     <x>273</x>
+     <y>114</y>
     </hint>
    </hints>
   </connection>
@@ -774,28 +750,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>82</x>
-     <y>116</y>
+     <x>83</x>
+     <y>114</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>510</x>
-     <y>116</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>system_font_button</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>fontCombo</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>82</x>
-     <y>152</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>269</x>
-     <y>152</y>
+     <x>456</x>
+     <y>114</y>
     </hint>
    </hints>
   </connection>
@@ -924,6 +884,22 @@
     <hint type="destinationlabel" >
      <x>492</x>
      <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>system_font_button</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>fontCombo</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>74</x>
+     <y>138</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>264</x>
+     <y>138</y>
     </hint>
    </hints>
   </connection>
